SET( NAME agent )

INCLUDE_DIRECTORIES( ../ )
INCLUDE_DIRECTORIES( ../lib )

SET( SOURCES
  Main.cpp
  )

SET( HEADERS
  )

SET( CORELIBS
  ${QT_LIBRARIES}
  )

QT4_WRAP_CPP( HEADERS_MOC ${HEADERS} )

ADD_EXECUTABLE( ${NAME} ${SOURCES} ${HEADERS_MOC} )
TARGET_LINK_LIBRARIES( ${NAME} ${CORELIBS} )
#TARGET_LINK_LIBRARIES( ${NAME} backup ${CORELIBS} )

#ADD_DEPENDENCIES(
#  ${NAME}
#  backup
#  )
  
