SET( NAME crypto )

INCLUDE_DIRECTORIES( ${OPENSSL_INCLUDE_DIR} )

SET( SOURCES
  Key.h
  Key.cpp

  Sign.h
  Sign.cpp

  Digest.h
  Digest.cpp
  )

SET( HEADERS
  )

SET( CORELIBS
  ${QT_LIBRARIES}
  ${QT_QTNETWORK_LIBRARY}
  ${OPENSSL_SSL_LIBRARY}
  ${OPENSSL_CRYPTO_LIBRARY}
  )

QT4_WRAP_CPP( HEADERS_MOC ${HEADERS} )

ADD_LIBRARY( ${NAME} ${SOURCES} ${HEADERS_MOC} )
TARGET_LINK_LIBRARIES( ${NAME} ${CORELIBS} )
