SET( NAME srv )

INCLUDE_DIRECTORIES( .. )

SET( SOURCES
  ServerManager.h
  ServerManager.cpp
  )

SET( HEADERS
  )

SET( CORELIBS
  ${QT_LIBRARIES}
  ${QT_QTSQL_LIBRARY}
  util
  )

QT4_WRAP_CPP( HEADERS_MOC ${HEADERS} )

ADD_LIBRARY( ${NAME} ${SOURCES} ${HEADERS_MOC} )
TARGET_LINK_LIBRARIES( ${NAME} ${CORELIBS} )

ADD_DEPENDENCIES(
  ${NAME}
  util
  )
